--- a/_posts/2017-04-09-acoustic.md
+++ b/_posts/2017-04-09-acoustic.md
@@ -13,8 +13,8 @@ JB :
 
 
 <p>
-<h4>ACOUSTIC ARTE POVERA</h4><br />
-06. bis 09.04.17<br /><br />
+<h4>ACOUSTIC ARTE POVERA</h4>
+06 bis 09|04|17<br /><br />
 
 w / Benjamin Tomasi / Lala Nomada<br />
 Elisabeth Schaefer<br />
