--- a/_posts/2017-07-01-pit.md
+++ b/_posts/2017-07-01-pit.md
@@ -17,6 +17,6 @@ JB :
 01|07|17 - 21|07|17
 
 <br /><br />
-<img src="{{ site.url }}/images/busch-koenigshofer.jpg" alt="image">
+<img src="{{ site.url }}/images/pit_small.jpg" alt="image">
 
 </p>
