--- a/_posts/2017-06-06-moozak.md
+++ b/_posts/2017-06-06-moozak.md
@@ -13,10 +13,10 @@ JB :
 
 
 <p>
-<h4>Rinus van Alebeek, Klub Moozak</h4>
+<h4>Rinus van Alebeek, Stögermayer/Hausch/Kühn, Klub Moozak</h4>
 06|06|17
 
 <br /><br />
-<img src="{{ site.url }}/images/busch-koenigshofer.jpg" alt="image">
+<img src="{{ site.url }}/images/moozak_small.jpg" alt="image">
 
 </p>
