--- a/_posts/2017-06-09-gudinni.md
+++ b/_posts/2017-06-09-gudinni.md
@@ -17,6 +17,7 @@ JB :
 09|06|17
 
 <br /><br />
-<img src="{{ site.url }}/images/busch-koenigshofer.jpg" alt="image">
+<img src="{{ site.url }}/images/lenz_small.jpg" alt="image">
+<img src="{{ site.url }}/images/gudinni_small.jpg" alt="image">
 
 </p>
