--- a/_posts/2017-06-06-moozak.md
+++ b/_posts/2017-06-06-moozak.md
@@ -18,5 +18,6 @@ JB :
 
 <br /><br />
 <img src="{{ site.url }}/images/moozak_small.jpg" alt="image">
-
+<p></p>
+<img src="{{ site.url }}/images/moozak_small2.jpg" alt="image">
 </p>
