--- a/_posts/2016-09-20-jsx.md
+++ b/_posts/2016-09-20-jsx.md
@@ -12,9 +12,10 @@ JB :
 
 <p>
 <h4>JSX - Jorge Sanchez Chiong</h4>	
-Turntables, live recordings voice-o-graph, 08|9|16
+08|9|16
 <br /><br />
-
+Turntables, live recordings voice-o-graph
+<br /><br />
 <img src="{{ site.url }}/images/jorge_sanchez.jpg" alt="image">
 </p>
 
