--- a/_posts/2017-07-14-pit-live.md
+++ b/_posts/2017-07-14-pit-live.md
@@ -13,10 +13,10 @@ JB :
 
 
 <p>
-<h4>Pit Noack / Labor für Sprechalgorithmen / Konzert</h4>
-014|07|17
+<h4>Pit Noack / Labor für Sprechalgorithmen</h4>
+01|07|17 - 21|07|17
 
 <br /><br />
-<img src="{{ site.url }}/images/pit_konzert_small.jpg" alt="image">
+<img src="{{ site.url }}/images/pit_small.jpg" alt="image">
 
 </p>
