--- a/_posts/2017-09-15-arn-kurdi.md
+++ b/_posts/2017-09-15-arn-kurdi.md
@@ -17,7 +17,7 @@ JB :
 15|09|17
 
 <br /><br />
-<img src="{{ site.url }}/images/arn_small.jpg" alt="image">
+<img src="{{ site.url }}/images/arn_small.jpg" alt="image"><br />
 <img src="{{ site.url }}/images/kurdi_small.jpg" alt="image">
 
 </p>
