--- a/_posts/2017-12-20-jsx.md
+++ b/_posts/2017-12-20-jsx.md
@@ -13,10 +13,12 @@ JB :
 
 
 <p>
-<h4>Phil Minton & dieb13</h4>
-03|12|17
+<h4>Jorge Sanchez Chiong</h4>
+20|12|17
 
+{comment}
 <br /><br />
 <img src="{{ site.url }}/images/dieb13_minton_small.jpg" alt="image">
 
 </p>
+{endcomment}
