--- a/_posts/2017-09-15-arn-kurdi.md
+++ b/_posts/2017-09-15-arn-kurdi.md
@@ -13,7 +13,7 @@ JB :
 
 
 <p>
-<h4>Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)</h4>
+<h4>Muyassar Kurdi / Eric Arn</h4>
 15|09|17
 
 <br /><br />
