--- a/_posts/2017-12-20-jsx.md
+++ b/_posts/2017-12-20-jsx.md
@@ -16,9 +16,9 @@ JB :
 <h4>Jorge Sanchez Chiong</h4>
 20|12|17
 
-{comment}
+{% comment %}
 <br /><br />
 <img src="{{ site.url }}/images/dieb13_minton_small.jpg" alt="image">
 
 </p>
-{endcomment}
+{% endcomment %}
