--- a/_posts/2018-02-01-noid.md
+++ b/_posts/2018-02-01-noid.md
@@ -18,7 +18,7 @@ JB :
 01|02|18
 
 <br /><br />
-photos by Mihail Novakov
+photo by Mihail Novakov
 </p><p>
 <img src="{{ site.url }}/images/noid_paraisofono_small.jpg" alt="image">
 
