--- a/_posts/2018-06-02-pamp.md
+++ b/_posts/2018-06-02-pamp.md
@@ -16,7 +16,10 @@ JB :
 <h4>Danielle Pamp</h4>
 02|06|18
 
+{% comment %}
 <br /><br />
 </p><p>
 <img src="{{ site.url }}/images/pamp.jpg" alt="image">
 </p>
+
+{% endcomment %}
