--- a/_posts/2018-05-20-zgb.md
+++ b/_posts/2018-05-20-zgb.md
@@ -14,10 +14,11 @@ JB :
 
 <p>
 <h4>ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler</h4>
-16|05|18
+20|05|18
 
+{% comment %}
 <br /><br />
 </p><p>
 <img src="{{ site.url }}/images/zgb.jpg" alt="image">
 </p>
-
+{% endcomment %}
