--- a/_posts/2018-04-14-kuehn.md
+++ b/_posts/2018-04-14-kuehn.md
@@ -14,8 +14,10 @@ JB :
 
 <p>
 <h4>Uli Kühn</h4>
-"B.W.A."<br />
-14|04|18
+"art, fun an seriously blinking stuff"<br />
+15|04|18 - 11|05|18 
+
+
 
 <br /><br />
 </p><p>
