--- a/_posts/2018-05-20-zgb.md
+++ b/_posts/2018-05-20-zgb.md
@@ -16,9 +16,10 @@ JB :
 <h4>ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler</h4>
 20|05|18
 
-{% comment %}
 <br /><br />
 </p><p>
-<img src="{{ site.url }}/images/zgb.jpg" alt="image">
+<img src="{{ site.url }}/images/dario_fariello_zgb.jpg" alt="image">
 </p>
+
+{% comment %}
 {% endcomment %}
