--- a/_posts/2019-01-23-anna_karl.md
+++ b/_posts/2019-01-23-anna_karl.md
@@ -19,7 +19,7 @@ JB :
 
 <br /><br />
 </p><p>
-<img src="{{ site.url }}/images/anna_karl_sm.jpg" alt="image">
+<img src="{{ site.url }}/images/anna_play.jpg" alt="image">
 </p>
 
 
