--- a/_posts/2019-05-17-nasiah.md
+++ b/_posts/2019-05-17-nasiah.md
@@ -2,7 +2,7 @@
 published: true
 layout: post
 show_worktitle_sidebar: true
-tags: Ausstellung Performance
+tags: Ausstellung
 JB :
   analytics : false
 ---
