--- a/_posts/2019-05-17-nasiah.md
+++ b/_posts/2019-05-17-nasiah.md
@@ -19,5 +19,5 @@ JB :
 
 <br /><br />
 </p><p>
-<img src="{{ site.url }}/images/lydia_nasiah.jpg" alt="image">
+<img src="{{ site.url }}/images/lydia.jpg" alt="image">
 </p>
